# NES_emulator

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  index.html
.github/workflows/: test_report.yml
data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/test-cases/: 108a6d45db02dca4.json  10bd7d22f3ccffa6.json  111b635b59dbbe48.json  112342762182f857.json  112c4cb31c565625.json  121b6833d0a9e011.json  13fc011b5e10209a.json  147e97c67d3bcdb1.json  15de8d2e28816593.json  17bf11d1719f1663.json  1a16e81723c47f52.json  1a2e97d8c64ac696.json  1a88ebe01a38b3ac.json  1aa87039c22441f.json  1becdef6b6d60bbb.json  1bf7c234bc885093.json  1c3eceb160ace758.json  1e082e1e41bc2988.json  1e0aeb93114e57f4.json  1e9dc60b3ddd2104.json  206fada1cae9a1a5.json  208810c6cd77f038.json  20d4a4a131c9c881.json  21de59c944df1ace.json  222fc7bd6aabc888.json  2249cf494e790a53.json  23b8493a967344a6.json  2430fd35d40e4c48.json  26060cd642acd5c1.json  268e18b5059432fe.json  26f74857b87f9201.json  273393268d9572f7.json  27b0dfbc55369dc0.json  280eadfe918a74d5.json  282c8a8474be5c41.json  2857ca2bcba5710c.json  286416576dd07299.json  297956a7509385a3.json  29f0387fd1a8b5f4.json  2b5abb91ab8892c6.json  (+225 more)
export/: influxDbData.txt  prometheusData.txt
history/: history.json
src/: main.cpp
src/bus/: bus.cpp  bus.h
src/cartridge/: cartridge.cpp  cartridge.h
src/cartridge/mapper/: mapper.h  mapper_00.h
src/cpu/: addressing.cpp  cpu.cpp  cpu.h  flags.h  instructions.cpp  instructions.h  opcodes.cpp  opcodes.h
src/cpu/instructions/: arithmetic.cpp  bitwise.cpp  branch.cpp  compare.cpp  flagInstruction.cpp  jump.cpp  ld.cpp  lda.cpp  load.cpp  misc.cpp  shift.cpp  sta.cpp  stack.cpp  store.cpp  (+1 more)
src/memory/: memory.cpp  memory.h
tests/: instruction_test.cpp  main.cpp  test_cartridge.cpp  test_cycles.cpp  test_flags.cpp  test_flags.h  test_helpers.h  test_instruction.cpp  test_instruction.h  test_memory.cpp  test_memory.h
tests/instructions/: test_arithmetic.cpp  test_bitwise.cpp  test_branch.cpp  test_compare.cpp  test_flagsInstructions.cpp  test_instruction.h  test_jump.cpp  test_ld_instruction.cpp  test_shift.cpp  test_st_instruction.cpp  test_stacksInstructions.cpp  test_subroutines.cpp  test_transfer.cpp
tests/programTest/: basicProgramTest.cpp
widgets/: duration.json  severity.json  status-chart.json  suites.json  summary.json
